removed mention of exec

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout      : default
-title       : "CWRUbotix — Home"
+title       : "Arc One — Home"
 categories  : [index]
 stylesheets : [index]
 ---
@@ -8,7 +8,7 @@ stylesheets : [index]
 <a class="anchor" id="main"></a>
 <div id="home">
   <img src="res/home/mate_home_2022.jpg" style="max-width:900px;margin:0;"/>
-  <div id="motto"><b>WE BUILD ROBOTS BECAUSE ROBOTS ARE AWESOME</b></div>
+  <div id="motto"><b>TODO</b></div>
   <a href="join.html">
     <div id="join_btn"><p>Join Us</p></div>
   </a>
@@ -20,13 +20,13 @@ stylesheets : [index]
   <div class="division"></div>
   <p style="font-size:24px;max-width:1000px;margin:0 auto 70px auto;">TODO</p>
   <img style="max-width:1200px;margin:0;" src="res/full_team/team_full_2021_2022.jpg"/>
-  <p class="hd">Executive Board</p>
+  <p class="hd">Team</p>
   <div class="division" style="margin-bottom:30px"></div>
   <div class="exec_board_cont">
     {% include member_tiles.html %}
 
     <p style="font-size:24px;max-width:1000px;margin:0 auto 70px auto;">
-    Learn more about our executive board <a href="members.html#exec">here</a>.
+    Learn more about our team <a href="members.html#team">here</a>.
     </p>
   </div>
 </div>
@@ -51,7 +51,7 @@ stylesheets : [index]
 <div id="sponsors">
   <p class="hd">Sponsors</p>
   <div class="division"></div>
-  <div class="sponsors_cont">
+  <!-- <div class="sponsors_cont">
 
     {% for sponsor in site.data.sponsors %}
     <div class="sponsor">
@@ -61,7 +61,7 @@ stylesheets : [index]
     </div>
     {% endfor %}
 
-  </div>
+  </div> -->
   <a class="btn" href="sponsorship.html">
     Interested in sponsoring?
   </a>
