--- a/members.html
+++ b/members.html
@@ -5,7 +5,7 @@ stylesheets : [members]
 <div class="topspace"></div>
 
 <div id="members">
-    <a class="anchor" id="exec"></a>
+    <a class="anchor" id="team"></a>
     <p class="hd">Executive Board Biographies</p>
     <div class="division"></div>
     <p class="info">
